--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.BesokMasak"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeListActivity"
+            android:name=".ui.RecipeListActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".ui.SearchActivity"
             android:exported="false" />
     </application>
 
